change echarts.js with echarts.min.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" href="static/da-slider.css" />
     <script src="static/js/recorder.js"></script>
-	<script src="static/js/echarts.js"></script>
+	<script src="static/js/echarts.min.js"></script>
     <!-- Owl Carousel Assets -->
     <link href="static/js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="static/styles.css" />
