--- a/templates/emo_visual.html
+++ b/templates/emo_visual.html
@@ -22,7 +22,7 @@
             data1.push([obj[i].use_date,obj[i].angry,'angry']);
             data1.push([obj[i].use_date,obj[i].bored,'bored']);
             data1.push([obj[i].use_date,obj[i].disgust,'disgust']);
-            data1.push([obj[i].use_date,obj[i].anxious_fear,'anxious_fear']);
+            data1.push([obj[i].use_date,obj[i].anxious,'anxious']);
             data1.push([obj[i].use_date,obj[i].happy,'happy']);
             data1.push([obj[i].use_date,obj[i].sad,'sad']);
             data1.push([obj[i].use_date,obj[i].neutral,'neutral']);
@@ -44,7 +44,7 @@
         },
 
         legend: {
-            data: ['angry', 'bored', 'disgust','anxious_fear', 'happy', 'sad', 'neutral'],
+            data: ['angry', 'bored', 'disgust','anxious', 'happy', 'sad', 'neutral'],
         },
 
         singleAxis: {
